Version 1.4.1
- CHG: If a bug ID is specified multiple times in a log message, the log
       dialog now shows each ID only once in the bug ID column. (Stefan)
- CHG: The bug ID column in the log dialog is now shown if the
       bugtraq:url is empty but the bugtraq:logregex is set. (Stefan)
- BUG: When the bugtraq:message was set to "%BUGID%" only and the 
       bugtraq:number was set to "true", the log message from the
       'recent log messages' was inserted into the bug ID field instead of
       the log message field in the commit dialog. (Stefan)
- BUG: When saving a property over an existing and in-use file an exception
       was thrown. (Stefan)
- BUG: When columns were hidden in the various dialogs using the status
       control, the redrawing on the right end was sometimes wrong.
       See issue #293 for details. (Stefan)
- BUG: The bugtraq:regex parsing was wrong if the group object was not
       the last in the string. See issue #295 for details. (Stefan)
- BUG: Showing the changes done in a revision of a renamed file in
       the revision of the rename could fail for unified diffs. (Stefan)
- BUG: The log dialog could crash when trying to show a log message with a
       bug ID and an illegal regex string. (Stefan)
- BUG: When the status fetching in the action dialog was cancelled a race
       condition could occur which lead to a crash. (Stefan)

Version 1.4.0
- NEW: Allow changing the alpha value in overlapped mode in TortoiseIDiff
       to be changed with Ctrl+Shift+Wheel. (Stefan)
- NEW: In the file diff dialog, Ctrl-A now selects all entries, and 
       Ctrl-C copies the selected entries to the clipboard. (Stefan)
- CHG: Switched files are only shown in the check-for-modifications
       dialog and not in e.g. the commit/revert/add dialog if they're
       not modified. (Stefan)
- CHG: Importing a folder from the repository browser now uses the
       global ignore patterns. (Stefan)