@@ -21,6 +21,7 @@ version 1.4.1
 7558							: bug ID column if url is empty
 7560							: log dialog regex crash
 7561							: cancel in CSVNStatusListCtrl
+7572							: CR lineendings
 
 version 1.4.0
 7198							: Remove Win64 property to work with latest WiX
